[tool.poetry]
name = "pait"
version = "0.7"
description = "Pait is a Python api tool. Pait enables your Python web framework to have type checking, parameter type conversion, interface document generation and can display your documents through Redoc or Swagger (power by inspect, pydantic)"
authors = ["So1n <so1n897046026@gmail.com>"]
license = "Apache Software License"
readme = "./README.md"
repository = "https://github.com/so1n/pait"
homepage = "https://github.com/so1n/pait"

[tool.poetry.dependencies]
python = "^3.7"
pydantic = "^1.7.3"
PyYAML = "^5.4.1"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"
pytest = "^6.1.2"
isort = "^5.6.4"
Flask = "^1.1.2"
starlette = "^0.14.1"
uvicorn = "^0.13.4"
coverage = "^5.5"
requests = "^2.25.1"
pytest-mock = "^3.5.1"
python-multipart = "^0.0.5"
sanic = "^21.3.4"
sanic-testing = "^0.3.0"
tornado = "^6.1"
pytest-tornado = "^0.8.1"
pytest-asyncio = "^0.14.0"
pre-commit = "^2.14.0"
autoflake = "^1.4"
flake8 = "^3.9.2"
pytest-profiling = "^1.7.0"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.pytest]
testpaths = "tests"

[tool.coverage.run]
branch = true
source = ["pait"]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # type hints
    "if TYPE_CHECKING:",
    "pass",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
