[tool.poetry]
name = "pait"
version = "0.8.0.2"
description = "Pait is a Python api tool. Pait enables your Python web framework to have type checking, parameter type conversion, interface document generation and can display your documents through Redoc or Swagger (power by inspect, pydantic)"
authors = ["So1n <so1n897046026@gmail.com>"]
license = "Apache Software License"
readme = "./README.md"
repository = "https://github.com/so1n/pait"
homepage = "https://github.com/so1n/pait"

[tool.poetry.scripts]
protoc-gen-pait-route = "pait.grpc.plugin.main:main"

[tool.poetry.dependencies]
python = "^3.7"

any-api = "0.1.0.3"
pydantic = "^1.7.3"
typing-extensions = "^4.1.1"
protobuf-to-pydantic = { version="^0.1.7", optional = true}
jinja2 = { version="2.11.3", optional=true}
redis = { version = "^4.2.2", optional = true }

[tool.poetry.urls]
"Source" = "https://github.com/so1n/pait"
"Tracker" = "https://github.com/so1n/pait/issues"
"Changelog" = "https://github.com/so1n/pait/blob/master/CHANGELOG.md"
"Documentation" = "https://so1n.me/pait/"


[tool.poetry.extras]
redis = ["redis"]
grpc = ["protobuf-to-pydantic", "jinja2"]
all = ["redis", "protobuf-to-pydantic", "jinja2"]

[tool.poetry.group.framework.dependencies]
werkzeug = "1.0.1"
Flask = "1.1.2"
sanic = "21.3.4"
sanic-testing = "0.3.0"
tornado = "6.1"
uvicorn = "0.13.4"
starlette = "0.14.1"
markupsafe = "2.0.1"
itsdangerous = "1.1.0"
protobuf = "3.20.1"

[tool.poetry.group.test.dependencies]
pytest = "6.2.5"
coverage = "5.5"
requests = "2.25.1"
pytest-mock = "3.5.1"
python-multipart = "0.0.5"
pytest-asyncio = "0.14.0"
pytest-profiling = "1.7.0"
aiofiles = "0.8.0"
mypy-protobuf = "3.2.0"
lark = "^1.1.2"
pytest-benchmark = "^4.0.0"
pyyaml = "6.0"
# During development, if it is found that the project cannot be started, please specify the following dependencies forcibly
importlib-metadata = "4.11.4"

[tool.poetry.group.dev.dependencies]
black = "20.8b1"
mypy = "0.790"
isort = "5.6.4"
pre-commit = "2.14.0"
autoflake = "1.4"
flake8 = "3.9.2"
mkdocs-material = "^8.1.7"

[tool.protobuf-to-pydantic.format]
black = true
isort = true
autoflake = true

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true
ignore-init-module-imports = true

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
python_executable = ".venv/bin/python"
exclude = [
    "^example/example_grpc/python_example_proto_code/example_proto",
    "^pait/http"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["pait"]
omit = [
    "pait/api_doc/*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "continue",

    # type hints
    "if TYPE_CHECKING:",
    "pass",
]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
